--- a/src/template.ejs
+++ b/src/template.ejs
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" crossorigin="anonymous">
 
-    <link rel="shortcut icon" href="https://raw.githubusercontent.com/benc-uk/k6-reporter/main/assets/icon.png" type="image/png">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/jlarminay/k6-reporter/main/assets/icon.png" type="image/png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>K6 Load Test: <%= title %></title>
@@ -443,6 +443,6 @@
       </div> 
       <!-- ---- end tab ---- -->
     </div>
-    <footer>K6 Reporter v<%= version %> - Ben Coleman 2021, <a href="https://github.com/benc-uk/k6-reporter">[GitHub]</a></footer>
+    <footer>K6 Reporter v<%= version %> - Josh Larminay, 2025, <a href="https://github.com/jlarminay/k6-reporter">[GitHub]</a></footer>
   </body>
 </html>
